# ElfOwl

./: .gitignore  PUBLISHING.md  README.md  pom.xml
.github/workflows/: publish.yml  release.yml
example/: CMakeLists.txt  README.md  pom.xml  run_demo.sh
example/java/org/elfowl/example/: NativeDemo.java
example/native/: owl_branch.c  owl_bridge.c  owl_entry.c  owl_leaf.c  owl_seed.c  owl_song.c
src/main/java/io/github/ganjb/elfowl/: DirectoryLibraryScanner.java  ElfLibraryMetadataParser.java  LibraryMetadata.java  LibraryMetadataParser.java  LibraryPlan.java  LibraryPlanner.java  NativeLibraryLoadException.java  NativeLibraryLoader.java  NativeLoadOptions.java  NativeLoadResult.java
src/main/java/org/elfowl/loader/: DirectoryLibraryScanner.java  ElfLibraryMetadataParser.java  LibraryMetadata.java  LibraryMetadataParser.java  LibraryPlan.java  LibraryPlanner.java  NativeLibraryLoadException.java  NativeLibraryLoader.java  NativeLoadOptions.java  NativeLoadResult.java
src/test/java/io/github/ganjb/elfowl/: LibraryPlannerTest.java  NativeLibraryLoaderTest.java
